Issue with Roadiz mono letter-spacing

--- a/Sami/Resources/themes/default/css/sami.less
+++ b/Sami/Resources/themes/default/css/sami.less
@@ -388,6 +388,7 @@ a abbr {
 
 tt, code, pre {
     font-family: "RoadizSans Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    letter-spacing: -0.08em;
 }
 
 code {
